# Rust

./: Cargo.toml  README.md
src/: auth.rs  db.rs  email.rs  main.rs  models.rs
src/models/: User.rs
tests/: integration_tests.rs
