[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

# Main dependencies for the application
[dependencies]
actix-web = "4.3"  # Web framework for building web applications
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"  # JSON support for Serde
tokio = { version = "1.28", features = ["full"] }  # Asynchronous runtime
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }  # SQL toolkit for Rust
bcrypt = "0.14"  # Password hashing library
jsonwebtoken = "8.3"  # JSON Web Token handling
dotenv = "0.15"  # Environment variable management
validator = { version = "0.16", features = ["derive"] }  # Input validation
lettre = "0.10"  # Email sending library
uuid = { version = "1.3", features = ["v4"] }  # UUID generation support
chrono = "0.4"

# Development dependencies
[dev-dependencies]
actix-rt = "2.8"  # Runtime for Actix
